--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
+
 * {
     padding: 0;
     margin: 0;
@@ -12,11 +15,15 @@
 
 }
 
-
+html {
+    font-size: 62.5%;
+    font-family: 'Kumbh Sans', sans-serif;
+}
 
 
 .bg {
-   
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
     background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
@@ -28,7 +35,82 @@
     
     
 }
- 
+
+.card {
+    width: 320px;
+    height: 340px;
+    background-color: white;
+    border-radius: 15px;
+    margin: auto;
+    text-align: center;
+}
+
+.header {
+    
+    width: 320px;
+    height: 128px;
+    border-radius: 15px 15px 0 0;
+}
+
+.user {
+    position: absolute;
+    border-radius: 50%;
+    left: calc(50% - 48px);
+    top: calc(50% - 96px);
+    border: 4px solid white;
+}
+
+.name {
+    margin-top: 70px;
+    font-size: 1.8rem;
+    color: var(--Very-dark-desaturated-blue);
+    font-weight: 700;
+}
+
+.name span {
+    color: var(--Dark-grayish-blue);
+    font-weight: 400;
+    margin-left: 5px;
+}
+
+.city {
+    font-size: 1.4rem;
+    color: var(--Dark-grayish-blue);
+    font-weight: 400;
+    margin-top: 5px;
+}
+
+
+.line {
+    width: 317px;
+    border-bottom: 1px solid gainsboro;
+    
+    margin: 20px auto;
+
+}
+
+.info {
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.info .info--stats {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--Very-dark-desaturated-blue);
+}
+
+.info .info--description {
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: var(--Dark-grayish-blue);
+    margin-top: 5px;
+
+}
+
+
 
 /* media queries */
 
