correccion del letter spacing en info description

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ html {
 .info .info--description {
     font-size: 1rem;
     font-weight: 400;
-    letter-spacing: 1gipx;
+    letter-spacing: 1px;
     color: var(--Dark-grayish-blue);
     margin-top: 5px;
 
